; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_observer.c_spl_object_storage_compare_objects.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_observer.c_spl_object_storage_compare_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.TYPE_4__ = type { i32 }

@spl_ce_SplObjectStorage = common dso_local global i64 0, align 8
@spl_object_storage_compare_info = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @spl_object_storage_compare_objects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_object_storage_compare_objects(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32* %8, i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @Z_OBJ_P(i32* %11)
  %13 = inttoptr i64 %12 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %6, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @Z_OBJ_P(i32* %14)
  %16 = inttoptr i64 %15 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %16, %struct.TYPE_3__** %7, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @spl_ce_SplObjectStorage, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %28, label %22

22:                                               ; preds = %2
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @spl_ce_SplObjectStorage, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %22, %2
  store i32 1, i32* %3, align 4
  br label %39

29:                                               ; preds = %22
  %30 = load i32*, i32** %4, align 8
  %31 = call %struct.TYPE_4__* @Z_SPLOBJSTORAGE_P(i32* %30)
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32*, i32** %5, align 8
  %34 = call %struct.TYPE_4__* @Z_SPLOBJSTORAGE_P(i32* %33)
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i64, i64* @spl_object_storage_compare_info, align 8
  %37 = trunc i64 %36 to i32
  %38 = call i32 @zend_hash_compare(i32* %32, i32* %35, i32 %37, i32 0)
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %29, %28
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32*, i32*) #1

declare dso_local i64 @Z_OBJ_P(i32*) #1

declare dso_local i32 @zend_hash_compare(i32*, i32*, i32, i32) #1

declare dso_local %struct.TYPE_4__* @Z_SPLOBJSTORAGE_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
